--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
-# 忽略操作系统生成的文件
+# 日志文件
+*.log
+
+# 临时文件
+*.tmp
+*.temp
+
+# IDE 配置文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 系统文件
 .DS_Store
 Thumbs.db
 
-# 忽略日志文件
-*.log
-
-# 忽略构建产物和依赖目录
-/build/
-/node_modules/
-
-# 忽略敏感的配置文件
-config.ini
+# 备份文件
+*.bak
+*.backup
 
 #网页文件
 htmlfile/
